--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="public/style.css">
     <title>Titulo da pagina</title>
 </head>
 <body>
-    <%= title %>
+    <%= name %>
 </body>
 </html>
